--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
   <title>Enquadra Rural</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HT9X5TSLTZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HT9X5TSLTZ');
+</script>
 </head>
 <body>
   <header>
     <nav>
       <h1>🌾 Enquadra Rural</h1>
-<ul>
-  <li><a href="index.html">Início</a></li>
-  <li><a href="sobre.html">Sobre</a></li>
-  <li><a href="enquadramento.html">Enquadramento</a></li>
-  <li><a href="contato.html">Contato</a></li>
-</ul>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="enquadramento.html">Enquadramento</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
     </nav>
   </header>
 
