--- a/index.html
+++ b/index.html
@@ -33,8 +33,18 @@
     <section class="hero">
       <h2>Facilitando o acesso ao crédito rural</h2>
       <p>Use nossa ferramenta para descobrir o enquadramento ideal do produtor rural e acessar as linhas de financiamento corretas.</p>
-      <a href="../enquadramento/enquadramento.html" class="botao">Começar agora</a>
+      <a href="enquadramento.html" class="botao">Começar agora</a>
     </section>
+	<section class="atualizacoes">
+		<h2>📢 Atualizações e Novidades</h2>
+		<ul>
+			<li><strong>Out 2025:</strong> Lançamento oficial do site com domínio próprio e integração ao GitHub Pages.</li>
+			<li><strong>Out 2025:</strong> Verificação no Google Search Console e ativação do Google Analytics.</li>
+			<li><strong>Nov 2025:</strong> Implementação de formulário de contato com envio automático.</li>
+			<li><strong>Dez 2025:</strong> Área de simulação de crédito rural com base em perfil do produtor.</li>
+			<li><strong>Jan 2026:</strong> Versão mobile otimizada e integração com PWA.</li>
+		</ul>
+	</section>
   </main>
 
   <footer>
