--- a/download.html
+++ b/download.html
@@ -25,10 +25,10 @@
       <h2>📂 Materiais para Download</h2>
       <p>Aqui você encontra documentos úteis para produtores rurais:</p>
       <ul>
-        <li><a href="arquivos/consulta-empreendimentos.xlsx" download>Consultor de Empreendimentos - BCB</a></li>
-        <li><a href="arquivos/custo-produção-custeio-agricola.xlsx" download>Modelo - Custo de Produção - Custeio Agrícola</a></li>
-        <li><a href="arquivos/custo-produção-custeio-pecuario.xlsx" download>Modelo - Custo de Produção - Custeio Pecuário</a></li>
-        <li><a href="arquivos/projeto-investimento.xlsx" download>Modelo - Projeto de Investimento</a></li>
+        <li><a href="consulta-empreendimentos.xlsx" download>Consultor de Empreendimentos - BCB</a></li>
+        <li><a href="custo-produção-custeio-agricola.xlsx" download>Modelo - Custo de Produção - Custeio Agrícola</a></li>
+        <li><a href="custo-produção-custeio-pecuario.xlsx" download>Modelo - Custo de Produção - Custeio Pecuário</a></li>
+        <li><a href="projeto-investimento.xlsx" download>Modelo - Projeto de Investimento</a></li>
       </ul>
     </section>
   </main>
