--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Enquadra Rural</title>
+  <title>Descomplica Crédito Rural</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 
@@ -19,7 +19,7 @@
 <body>
   <header>
     <nav>
-      <h1>🌾 Enquadra Rural</h1>
+      <h1>🌾 Descomplica Crédito Rural</h1>
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre.html">Sobre</a></li>
@@ -32,23 +32,21 @@
   <main>
     <section class="hero">
       <h2>Facilitando o acesso ao crédito rural</h2>
-      <p>Use nossa ferramenta para descobrir o enquadramento ideal do produtor rural e acessar as linhas de financiamento corretas.</p>
+      <p>Utilize nossas ferramentas para auxiliar a você produtor rural, projetista ou funcionário de Instituição Financeira a tomar a melhor decisão para ofertar o Crédito Rural.</p>
       <a href="enquadramento.html" class="botao">Começar agora</a>
     </section>
 	<section class="atualizacoes">
 		<h2>📢 Atualizações e Novidades</h2>
 		<ul>
-			<li><strong>Out 2025:</strong> Lançamento oficial do site com domínio próprio e integração ao GitHub Pages.</li>
-			<li><strong>Out 2025:</strong> Verificação no Google Search Console e ativação do Google Analytics.</li>
-			<li><strong>Nov 2025:</strong> Implementação de formulário de contato com envio automático.</li>
-			<li><strong>Dez 2025:</strong> Área de simulação de crédito rural com base em perfil do produtor.</li>
-			<li><strong>Jan 2026:</strong> Versão mobile otimizada e integração com PWA.</li>
+			<li><strong>Out 2025:</strong> Lançamento oficial do site com domínio próprio.</li>
+			<li><strong>Out 2025:</strong> Área de simulação de crédito rural com base em perfil do produtor.</li>
+			<li><strong>Dez 2025:</strong> Versão mobile otimizada (Apple Store e Google Play Store).</li>
 		</ul>
 	</section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Enquadra Rural. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Descomplica Crédito Rural. Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
