--- a/enquadramento.html
+++ b/enquadramento.html
@@ -16,6 +16,7 @@
   <li><a href="sobre.html">Sobre</a></li>
   <li><a href="enquadramento.html">Enquadramento</a></li>
   <li><a href="contato.html">Contato</a></li>
+  <li><a href="download.html">Downloads</a></li>
 </ul>
     </nav>
   </header>
