--- a/enquadramento.html
+++ b/enquadramento.html
@@ -6,18 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
+
+  <!-- SEO e Indexação -->
+  <link rel="canonical" href="https://enquadrarural.com.br/enquadramento.html" />
+  <meta name="description" content="Ferramenta para calcular o enquadramento do produtor rural com base nas rendas agropecuárias e demais rendas.">
+  <meta name="robots" content="index, follow">
 </head>
 <body>
   <header>
     <nav>
       <h1>🌾 Enquadra Rural</h1>
-<ul>
-  <li><a href="index.html">Início</a></li>
-  <li><a href="sobre.html">Sobre</a></li>
-  <li><a href="enquadramento.html">Enquadramento</a></li>
-  <li><a href="contato.html">Contato</a></li>
-  <li><a href="download.html">Downloads</a></li>
-</ul>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="enquadramento.html">Enquadramento</a></li>
+        <li><a href="contato.html">Contato</a></li>
+        <li><a href="download.html">Downloads</a></li>
+      </ul>
     </nav>
   </header>
 
