--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HT9X5TSLTZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- SEO e Indexação -->
+  <link rel="canonical" href="https://enquadrarural.com.br/" />
+  <meta name="description" content="Ferramentas para facilitar o acesso ao crédito rural, voltadas para produtores, projetistas e instituições financeiras.">
+  <meta name="robots" content="index, follow">
 
-  gtag('config', 'G-HT9X5TSLTZ');
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HT9X5TSLTZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-HT9X5TSLTZ');
+  </script>
 </head>
 <body>
   <header>
@@ -25,7 +29,7 @@
         <li><a href="sobre.html">Sobre</a></li>
         <li><a href="enquadramento.html">Enquadramento</a></li>
         <li><a href="contato.html">Contato</a></li>
-		<li><a href="download.html">Downloads</a></li>
+        <li><a href="download.html">Downloads</a></li>
       </ul>
     </nav>
   </header>
@@ -36,14 +40,14 @@
       <p>Utilize nossas ferramentas para auxiliar a você produtor rural, projetista ou funcionário de Instituição Financeira a tomar a melhor decisão para ofertar o Crédito Rural.</p>
       <a href="enquadramento.html" class="botao">Começar agora</a>
     </section>
-	<section class="atualizacoes">
-		<h2>📢 Atualizações e Novidades</h2>
-		<ul>
-			<li><strong>Out 2025:</strong> Lançamento oficial do site com domínio próprio.</li>
-			<li><strong>Out 2025:</strong> Área de simulação de crédito rural com base em perfil do produtor.</li>
-			<li><strong>Dez 2025:</strong> Versão mobile otimizada (Apple Store e Google Play Store).</li>
-		</ul>
-	</section>
+    <section class="atualizacoes">
+      <h2>📢 Atualizações e Novidades</h2>
+      <ul>
+        <li><strong>Out 2025:</strong> Lançamento oficial do site com domínio próprio.</li>
+        <li><strong>Out 2025:</strong> Área de simulação de crédito rural com base em perfil do produtor.</li>
+        <li><strong>Dez 2025:</strong> Versão mobile otimizada (Apple Store e Google Play Store).</li>
+      </ul>
+    </section>
   </main>
 
   <footer>
