--- a/download.html
+++ b/download.html
@@ -2,14 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Downloads | Enquadra Rural</title>
+  <title>Downloads | Descomplica Crédito Rural</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <nav>
-      <h1>🌾 Enquadra Rural</h1>
+      <h1>🌾 Descomplica Crédito Rural</h1>
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre.html">Sobre</a></li>
@@ -34,7 +34,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Enquadra Rural. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Descomplica Crédito Rural. Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
