--- a/enquadramento.html
+++ b/enquadramento.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <nav>
-      <h1>🌾 Enquadra Rural</h1>
+      <h1>🌾 Descomplica Crédito Rural</h1>
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre.html">Sobre</a></li>
@@ -75,7 +75,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Enquadra Rural. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Descomplica Crédito Rural. Todos os direitos reservados.</p>
   </footer>
 
   <script src="script.js"></script>
