--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     gtag('js', new Date());
     gtag('config', 'G-HT9X5TSLTZ');
   </script>
+  <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
   <header>
