--- a/sobre.html
+++ b/sobre.html
@@ -2,14 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Sobre - Enquadra Rural</title>
+  <title>Sobre - Descomplica Crédito Rural</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <nav>
-      <h1>🌾 Enquadra Rural</h1>
+      <h1>🌾 Descomplica Crédito Rural</h1>
 <ul>
   <li><a href="index.html">Início</a></li>
   <li><a href="sobre.html">Sobre</a></li>
@@ -23,14 +23,14 @@
   <main>
     <section class="sobre">
       <h2>Sobre o projeto</h2>
-      <p>O Enquadra Rural nasceu com o objetivo de facilitar o acesso ao crédito rural, ajudando produtores a entenderem seu perfil e se enquadrarem corretamente nas linhas de financiamento disponíveis.</p>
-      <p>Com uma interface simples e intuitiva, o sistema permite que qualquer pessoa — mesmo sem conhecimento técnico — possa descobrir seu enquadramento e visualizar os dados de forma clara.</p>
+      <p>O Descomplica Crédito Rural nasceu com o objetivo de facilitar o acesso ao crédito rural, ajudando produtores a entenderem seu perfil e se enquadrarem corretamente nas linhas de financiamento disponíveis.</p>
+      <p>Com uma interface simples e intuitiva, o sistema permite que qualquer pessoa — mesmo sem conhecimento técnico — possa descobrir seu enquadramento e visualizar as linhas de crédito rural que podem tomar crédito.</p>
       <p>Ideal para cooperativas, consultores, agentes financeiros e produtores que desejam agilidade e precisão na tomada de decisão.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Enquadra Rural. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Descomplica Crédito Rural. Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
