--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 <body>
   <header>
     <nav>
-      <h1>🌾 Descomplica Crédito Rural</h1>
+      <h1>
+		<img src="logo.png" alt="Logo" style="height: 40px; vertical-align: middle;">
+		Descomplica Crédito Rural
+		</h1>
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre.html">Sobre</a></li>
